--- a/index.htm
+++ b/index.htm
@@ -9,5 +9,6 @@
 <body>
     <h1>Aqui iría el titulo de la página </h1>
     <p> Esto es un parrafo </p>
+    <p>Esto es un segundo parrafo</p>
 </body>
 </html>
